implemented email messaging

--- a/Dokumentation/Dokumentation/00_titel.tex
+++ b/Dokumentation/Dokumentation/00_titel.tex
@@ -63,7 +63,7 @@ im Bachelor Studiengang Angewandte Informatik \\}
 \\
 
 \begin{center}
-\large{24. Oktober 2016}
+\large{02. Dezember 2016}
 \end{center}
 
 
