added parts of anhang, changed evaluation chapter

--- a/Dokumentation/Dokumentation/99_anhang.tex
+++ b/Dokumentation/Dokumentation/99_anhang.tex
@@ -25,6 +25,15 @@
 \section*{Ausschnitt aus Kippo-Logdatei}
 \label{app:Ausschnitt aus Kippo-Logdatei}
 
+%\lstinputlisting
+%    [caption={Ausgabe der reverse-DNS-Auswertung}
+%       \label{lst:reverse_dns},
+%       captionpos=b,language={}]
+% {listings/kippo_log.txt}
+
+\begin{center}
+\includegraphics[scale=0.62]{img/kippo_log.png}
+\end{center}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%
