--- a/Dokumentation/Dokumentation/09_fazit.tex
+++ b/Dokumentation/Dokumentation/09_fazit.tex
@@ -1,14 +1,20 @@
 \chapter{Fazit}
 \label{ch:Fazit}
 
-- dieses Projekt hat uns deutlich gemacht, dass ein Server, der über das Internet erreichbar ist ein beliebtes Ziel ist\\
-- viele Verbindunge in kurzer zeit\\
-- innerhalb kürzester Zeit zig Angriffe auf den SSH-Honeypot\\
-- keine Standardpasswörter\\
-- Passwörter mit mindestens 8, besser 10 oder mehr Zeichen, sowie eine Kombination aus verschiedenen Zeichenklassen wie Groß- und Kleinbuchstaben, Zahlen und Sonderzeichen ist sicher.\\
+% - dieses Projekt hat uns deutlich gemacht, dass ein Server, der über das Internet erreichbar ist ein beliebtes Ziel ist\\
+% - viele Verbindunge in kurzer zeit\\
+% - innerhalb kürzester Zeit zig Angriffe auf den SSH-Honeypot\\
+% - keine Standardpasswörter\\
+%- Passwörter mit mindestens 8, besser 10 oder mehr Zeichen, sowie eine Kombination aus verschiedenen Zeichenklassen wie Groß- und Kleinbuchstaben, Zahlen und Sonderzeichen ist sicher.\\
 
-- webhoneypot fazit?\\
+%- webhoneypot fazit?\\
 
-- Honeypot ist mit fertigen Honeypot-Konfiguration schnell und einfach in eine bestehende Infrastruktur zu integrieren. Der daraus resultierende Wissensgewinn ist enorm wichtig, um eine Infrastruktur vor potentielle Angriffen abzusichern.\\
+%- Honeypot ist mit fertigen Honeypot-Konfiguration schnell und einfach in eine bestehende Infrastruktur zu integrieren. Der daraus resultierende Wissensgewinn ist enorm wichtig, um eine Infrastruktur vor potentielle Angriffen abzusichern.\\
 
-- über Bash-Skripte lassen sich Vorgänge schnell und einfach automatisieren.\\
+%- über Bash-Skripte lassen sich Vorgänge schnell und einfach automatisieren.\\
+
+%%
+
+Dieses Honeypot-Projekt war für die Teammitglieder äußerst lehr- und aufschlussreich. Die Umsetzung eines Honeypotsystems erfordert einiges an Planung, um die Gefahr einer möglichen Kompromittierung auf ein Minimum reduzieren zu können. Die im Rahmen der Vorlesung Systemadministration erlernten Fähigkeiten und Erfahrungen trugen dazu bei, ein Linux basiertes System grundlegend zu konfigurieren, auf bestimmte Anforderungen anzupassen sowie die Implementierung eines Projektgegenstands vorzunehmen.
+
+Darüber hinaus konnte das Projektteam Erfahrungen im Bereich von Honeypots sammeln. Besonders aufschlussreich war, dass ein im Internet erreichbarer Server oder Dienst in kürzester Zeit zum Opfer werden kann. Zudem wurde die vorhandene Kenntniss sichere Passwörter zu verwenden noch einmal verstärkt.
